GNOME Bugzilla – Bug 694678
Seahorse should depend on GnuPG for testing and documentation
Last modified: 2013-03-04 19:55:36 UTC
Created attachment 237358 [details] seahorse preferences menu When I select Edit > Preferences in a jhbuild from 2012-02-24, I only get options for Help or Close. The other preference options should be available.
Created attachment 237414 [details] [review] 3.8: seahorse should be built with gnupg and gpgme This is a patch against jhbuild. GnuPG is an optional dependency of seahorse only because some downstreams want to use seahorse without GnuPG. In GNOME we should always build it with GnuPG, test and document it that way.
Colin, could you do me a favor and look over the attached jhbuild patch before I push it to jhbuild? This is the first time I messed with sysdeps, so want to make sure I get this right. This is also a heads up that we should probably include gnupg and gpgme as deps of seahorse in gnome-ostree.
Created attachment 237415 [details] [review] prefs: Don't show preferences when no preferences are available This is a patch against seahorse. If seahorse is built without GnuPG support (not recommended, but possible) then there are currently no preferences available. Hide the Preferences menu item in these cases, so it doesn't show a confusing empty window. In addition fix some assertions and cleanup some unused code related to this.
Comment on attachment 237414 [details] [review] 3.8: seahorse should be built with gnupg and gpgme Pushed to jhbuild master.
Attachment 237415 [details] pushed as 8ca9513 - prefs: Don't show preferences when no preferences are available