prefs: Don't show preferences when no preferences are available

If seahorse is built without GnuPG support (not recommended, but
possible) then there are currently no preferences available.

Hide the Preferences menu item in these cases, so it doesn't show
a confusing empty window.

In addition fix some assertions and cleanup some unused code
related to this.

https://bugzilla.gnome.org/show_bug.cgi?id=694678